# Rok

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  story.json
src/: main.rs  story.rs  telling.rs
src/choice/: exit.rs  message.rs  mod.rs  move_scene.rs
