[package]
name = "rok"
version = "0.1.0"
authors = ["Daniel Miller (Earthmark) <earthmark.miller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
text_io = "0.1.7"
